--- a/Documentation/SequentialDataStore/toc.yml
+++ b/Documentation/SequentialDataStore/toc.yml
@@ -12,17 +12,17 @@
   href: indexes.md
 - name: Units of Measure
   href: Units_of_Measure.md
-- name: Reading Data
+- name: Read Data
   href: Reading_Data.md
-- name: Reading Data API
+- name: API calls for reading data
   href: Reading_Data_API.md
-- name: Writing Data
+- name: Write data
   href: Writing_Data.md
-- name: Writing Data API
+- name: API calls for writing data
   href: Writing_Data_API.md
 - name: Compression
   href: Compression.md
-- name: Searching
+- name: Search in SDS
   href: Searching.md
 - name: Filter Expressions - Data
   href: Filter_Expressions.md
