--- a/Documentation/toc.yml
+++ b/Documentation/toc.yml
@@ -21,5 +21,5 @@
   topicHref: Access_Control.md
 - name: Samples
   topicHref: samples.md
-- name: Getting Support
+- name: Technical Support
   topicHref: support.md
